--- a/basics_B/Recap/Basics_presentation.ipynb
+++ b/basics_B/Recap/Basics_presentation.ipynb
@@ -1,21 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Styling\n",
-    "from IPython.core.display import HTML"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -23,7 +8,7 @@
     }
    },
    "source": [
-    "# NGCM Summer Academy 2016:\n",
+    "# NGCM Summer Academy 2017:\n",
     "\n",
     "## Intermediate Python\n",
     "\n",
@@ -63,9 +48,6 @@
     "\n",
     "\n",
     "### <font color='mediumblue'> Material <font>\n",
-    "* Download material:\n",
-    "https://ngcm.github.io/summer-academy-2016-basics/basics_B.zip\n",
-    "\n",
     "\n",
     "* If you missed the basics, try these:\n",
     "    - [Hans Fangohr Python Book](http://www.southampton.ac.uk/~fangohr/training/python/pdfs/Python-for-Computational-Science-and-Engineering.pdf)\n",
@@ -85,19 +67,20 @@
     "###  <font color='mediumblue'> Material Outline </font>  \n",
     "\n",
     "#### <font color='midnightblue'>Basics Revision\n",
-    "    - Lists\n",
-    "    - Tuples\n",
-    "    - Dictionaries\n",
-    "    - Numpy\n",
-    "    - Loops\n",
-    "    - Functions\n",
-    "    - Matplotlib (Plotting)\n",
+    "   * Lists\n",
+    "   - Tuples\n",
+    "   - Numpy arrays\n",
+    "   - Dictionaries\n",
+    "   - For loops\n",
+    "   - Functions\n",
+    "   - Matplotlib (Plotting)\n",
+    "   \n",
     "#### <font color='midnightblue'>Object Oriented Programming\n",
-    "    - `Classes`\n",
-    "    - Initialization and `__init__`, `self`\n",
-    "    - Encapsulation\n",
-    "    - Inheritance\n",
-    "    - Magic operators"
+    "   * Classes\n",
+    "   - Initialization and `__init__`, `self`\n",
+    "   - Encapsulation\n",
+    "   - Inheritance\n",
+    "   - Magic operators"
    ]
   },
   {
@@ -188,19 +171,15 @@
     "\n",
     "To use numpy array, you need to include the following line of code:\n",
     "\n",
-    "import numpy\n",
+    "import numpy as np\n",
     "\n",
     "For a tutorial on modules, visit: https://docs.python.org/3/tutorial/modules.html\n",
-    "\n",
-    "For brevity, we normally we write:\n",
-    "\n",
-    "import numpy as np\n",
     "\n",
     "Numpy arrays are are:\n",
     "* Defined using np.array()\n",
     "* Mutable \n",
     "* Indexed\n",
-    "* Able to have mixed data types\n",
+    "* NOT able to have mixed data types\n",
     "* Useful for linear algebra - mathematical operations act quickly on numpy arrays\n",
     "* Allow integration between C/C++ and Fortran\n",
     "\n",
@@ -208,6 +187,9 @@
     "\n",
     "See other documentation: https://docs.scipy.org/doc/\n",
     "\n",
+    "If you're a MATLAB user, you may find this page useful, which sets out the difference between MATLAB and NumPy syntax:\n",
+    "\n",
+    "https://docs.scipy.org/doc/numpy-dev/user/numpy-for-matlab-users.html\n",
     "#### <font color='midnightblue'> Example: How to use"
    ]
   },
@@ -229,6 +211,16 @@
     "Numpy arrays are also useful for working with matrices and other 2d arrays and displaying these.\n",
     " \n",
     " #### <font color='midnightblue'> Example: 2d Arrays"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Numpy can also be used to create numpy arrays from data in a file using np.loadtxt().\n",
+    "The file must contain data in rows with equal numbers of entries.\n",
+    " \n",
+    "#### <font color='midnightblue'> Example: Loading data with np.loadtxt()"
    ]
   },
   {
@@ -320,23 +312,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color='midnightblue'> Example: 3d Plots"
+    "For a tutorial on matplotlib.pyplot, try: https://matplotlib.org/users/pyplot_tutorial.html\n",
+    "\n",
+    "This has examples of line graphs, scatter graphs and histograms.\n",
+    "\n",
+    "For more details and examples, visit: https://matplotlib.org/contents.html"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "For a tutorial on matplotlib.pyplot, try: https://matplotlib.org/users/pyplot_tutorial.html\n",
-    "\n",
-    "This has examples of line graphs, scatter graphs and histograms."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
    "source": [
     "# <font color='dodgerblue'> Other common modules\n",
     "\n",
@@ -345,7 +330,7 @@
     "\n",
     "\n",
     "\n",
-    "Other common modules you will come across are :\n",
+    "Other common modules you may come across are :\n",
     "    - math: for common maths functions and numerical constants\n",
     "    - scipy: a library of algorithms and mathematical tools.\n",
     "             For example there are built in algorithms for minimising/maximising functions\n",
@@ -370,9 +355,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
