--- a/basics_B/ObjectOriented/Classes for Basics B.ipynb
+++ b/basics_B/ObjectOriented/Classes for Basics B.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "%matplotlib inline"
    ]
   },
@@ -16,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What are classes?\n",
+    "# <font color='mediumblue'> What are classes?\n",
     "\n",
     "* A way of organising your code\n",
     "* Data is inherently linked to the things you can do with it.\n",
@@ -32,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Start by defining some terminology - Classes vs Objects vs Instances\n",
+    "### <font color='mediumblue'> Start by defining some terminology - Classes vs Objects vs Instances\n",
     "* Often used interchangably but they are different concepts.\n",
     "* A Class is like a template - you could consider the class \"Car\"\n",
     "* An object is a particular occurence of a class - so, for example, you could have \"Ford Mondeo\", \"Vauxhall Astra\", \"Lamborghini Gallardo\" be **objects** of type \"Car\".\n",
@@ -43,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Where are classes used in Python? Everywhere!"
+    "### <font color='mediumblue'> Where are classes used in Python? Everywhere!"
    ]
   },
   {
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -66,8 +67,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -75,7 +78,7 @@
        "float"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,8 +96,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -110,8 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -119,7 +126,7 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aside - What do all those underscores mean?\n",
+    "### <font color='midnightblue'> Aside - What do all those underscores mean?\n",
     " \n",
     "They're *hidden* methods - we'll talk more about these later."
    ]
@@ -141,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating a class\n",
+    "## <font color='mediumblue'> Creating a class\n",
     "\n",
     "Define some key things:\n",
     "* self - 'self' is a special type of variable which can be used inside the class to refer to itself.\n",
@@ -154,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -182,14 +189,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Using the class\n",
+    "##  <font color='mediumblue'> Using the class\n",
     "Use the same syntax as we use to call a function, *BUT* the arguments get passed in to the \"\\_\\_init\\_\\_\" function. Note that you *ignore* the self object, as Python sorts this out."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -213,8 +222,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -244,14 +255,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.MyClass object at 0x10f722e80>\n"
+      "<__main__.MyClass object at 0x115e83e10>\n"
      ]
     }
    ],
@@ -268,8 +281,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -289,7 +304,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -302,8 +319,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -326,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Need a better example!\n",
+    "### Need a better example!\n",
     "\n",
     "How about a Simulation class?\n",
     "* Write once, but can take different parameters.\n",
@@ -339,14 +358,14 @@
     "collapsed": true
    },
    "source": [
-    "# Consider a 1-D box of some length:\n",
+    "# <font color='mediumblue'> Consider a 1-D box of some length:\n",
     "What information does it need to know about itself?\n",
     "* How big is the box?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -370,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -409,8 +428,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -437,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -456,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now lets get you to do something...\n",
+    "## <font color='mediumblue'> Now lets get you to do something...\n",
     "\n",
     "Tasks (30-40 minutes):\n",
     "\n",
@@ -466,7 +487,7 @@
     "\n",
     "3) Add a method which plots the current position of the particles in the box.\n",
     "\n",
-    "4) Write a method that writes the current positions and velocities to a file.\n",
+    "4) Write a method that writes the current positions and velocities to a CSV file.\n",
     "\n",
     "5) Write a method that can load a CSV file of positions and velocities, create particles with these and then add them to the Box list of particles. (Hint: Look up the documentation for the module 'csv')"
    ]
@@ -482,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -522,8 +543,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "b = Box(10)\n",
@@ -537,10 +560,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0,0.0\r\n",
+      "0.5,0.3333333333333333\r\n",
+      "1.0,0.6666666666666666\r\n",
+      "1.5,1.0\r\n",
+      "2.0,1.3333333333333333\r\n",
+      "2.5,1.6666666666666667\r\n",
+      "3.0,2.0\r\n",
+      "3.5,2.3333333333333335\r\n",
+      "4.0,2.6666666666666665\r\n",
+      "4.5,3.0\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat test.csv"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Class Properties"
+    "## <font color='mediumblue'> Class Properties"
    ]
   },
   {
@@ -548,13 +599,16 @@
    "metadata": {},
    "source": [
     "* Properties can be used to do interesting things\n",
-    "* Lets adjust the class Particle we used:\n"
+    "* Special functions as part of a class that we mark with a 'decorator' - '@property'\n",
+    "* Lets adjust the class Particle we used to make its data members a property of the class. We also need to write a 'setter' method to set the data members.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Particle:\n",
@@ -600,7 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Why bother? It looks the same!\n",
+    "## <font color='midnightblue'> Why bother? It looks the same when we use it!\n",
     "\n",
     "* Well known in programming - 'an interface is a contract'\n",
     "* You might want to at some point rewrite a large portion of the underlying data - how it is stored for example.\n",
@@ -611,21 +665,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inheritance"
+    "# <font color='mediumblue'> Inheritance"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Last part of the course on Classes, but also the main reason for using classes!\n",
+    "* Last part of the course on Classes, but also one of the main reason for using classes!\n",
     "* Inheritance allows you to reuse parts of the code, but change some of the methods. Lets see how it might be useful...\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -664,14 +718,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Magic Methods:\n",
+    "# <font color='mediumblue'> Magic Methods:\n",
     "Remember earlier, when we did:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -695,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
@@ -722,6 +778,10 @@
     "        else:\n",
     "            return ValueError('To add two boxes they must be of the same length')\n",
     "        \n",
+    "    def mean_position(self):\n",
+    "        l = np.sum([p.r for p in self.particles])/len(self.particles)\n",
+    "        return l\n",
+    "    \n",
     "    def add_particle(self, particle):\n",
     "        self.particles.append(particle)\n",
     "    \n",
@@ -754,74 +814,284 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "a = Box(10)\n",
-    "a.add_particle(Particle(10, 10))"
+    "Now we've created an 'add' method, we can, create two boxes and add these together!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Box containing 1 particle\n",
+      "Box containing 1 particle\n",
+      "Box containing 2 particles\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Box(10)\n",
+    "a.add_particle(Particle(10, 10))\n",
+    "b = Box(10)\n",
+    "b.add_particle(Particle(15, 10))\n",
+    "c = a + b\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Looks good! But hang on..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Box containing 1 particle"
+       "(10.0, 15.0, 12.5)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a"
+    "a.mean_position(), b.mean_position(), c.mean_position()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "b = Box(10)\n",
-    "b.add_particle(Particle(15, 10))"
+    "a.step(0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = a + b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<__main__.Particle at 0x10f7ad9b0>, <__main__.Particle at 0x10f7ad208>]"
+       "(5.0, 15.0, 10.0)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c.particles"
+    "a.mean_position(), b.mean_position(), c.mean_position()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Why has the mean position of particles in Box C changed? Look at the memory address of the particles:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([<__main__.Particle at 0x115e5a780>],\n",
+       " [<__main__.Particle at 0x115e5a780>, <__main__.Particle at 0x115e65a90>])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.particles, c.particles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Boxes are pointing to the SAME particles!\n",
+    "If we don't want this to happen, we need to write a 'copy' constructor for the class - a function which knows how to create an identical copy of the particle! \n",
+    "\n",
+    "We can do this by using the 'deepcopy' function in the 'copy' module, and redefine the particle and slow particle classes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import copy\n",
+    "\n",
+    "class Particle:\n",
+    "    def __init__(self, r0, v0):\n",
+    "        \"\"\"\n",
+    "        r0 = initial position\n",
+    "        v0 = initial speed\n",
+    "        \"\"\"\n",
+    "        self.r = r0\n",
+    "        self.v = v0\n",
+    "    \n",
+    "    def step(self, dt, L):\n",
+    "        \"\"\"\n",
+    "        Move the particle\n",
+    "        dt = timestep\n",
+    "        L = length of the containing box\n",
+    "        \"\"\"\n",
+    "        self.r = self.r + self.v * dt\n",
+    "        \n",
+    "        if self.r >= L:\n",
+    "            self.r -= L\n",
+    "        elif self.r < 0:\n",
+    "            self.r += L\n",
+    "    \n",
+    "    def copy(self):\n",
+    "        return copy.deepcopy(self)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, we should change the Box class's '__add__' method, to use this copy operation rather than just append the child particles of the existing boxes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Box:\n",
+    "    def __init__(self, length):\n",
+    "        self.length = length\n",
+    "        self.particles = []\n",
+    "        self.t = 0\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        \n",
+    "        if self.length == other.length:\n",
+    "            b = Box(self.length)\n",
+    "            \n",
+    "            for p in self.particles:\n",
+    "                b.add_particle(p)\n",
+    "                \n",
+    "            for p in other.particles:\n",
+    "                b.add_particle(p)\n",
+    "            \n",
+    "            return b\n",
+    "        else:\n",
+    "            return ValueError('To add two boxes they must be of the same length')\n",
+    "        \n",
+    "    def mean_position(self):\n",
+    "        l = np.sum([p.r for p in self.particles])/len(self.particles)\n",
+    "        return l\n",
+    "    \n",
+    "    def add_particle(self, particle):\n",
+    "        self.particles.append(particle.copy())\n",
+    "    \n",
+    "    def step(self, dt):\n",
+    "        for particle in self.particles:\n",
+    "            particle.step(dt, self.length)\n",
+    "            \n",
+    "    def write(self, filename):\n",
+    "        f = open(filename, 'w')\n",
+    "        for particle in self.particles:\n",
+    "            f.write('{},{}\\n'.format(particle.r, particle.v))\n",
+    "        f.close()\n",
+    "        \n",
+    "    def plot(self):\n",
+    "        for particle in self.particles:\n",
+    "            plt.scatter(particle.r, 0)\n",
+    "            \n",
+    "    def load(self, filename):\n",
+    "        f = open(filename, 'r')\n",
+    "        csvfile = csv.reader(f)\n",
+    "        for position, velocity, ptype in csvfile:\n",
+    "            p = Particle(position, velocity)\n",
+    "            self.add_particle(p)\n",
+    "            \n",
+    "    def __repr__(self):\n",
+    "        if len(self.particles) == 1:\n",
+    "            return 'Box containing 1 particle'\n",
+    "        else:\n",
+    "            return 'Box containing {} particles'.format(len(self.particles))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Box containing 1 particle\n",
+      "Box containing 1 particle\n",
+      "Box containing 2 particles\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Box(10)\n",
+    "a.add_particle(Particle(10, 10))\n",
+    "b = Box(10)\n",
+    "b.add_particle(Particle(15, 10))\n",
+    "c = a + b\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n"
    ]
   }
  ],
@@ -841,7 +1111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
