Add lucy latest version

--- a/basics_B/Recap/Basics_presentation.ipynb
+++ b/basics_B/Recap/Basics_presentation.ipynb
@@ -87,6 +87,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# <font color='dodgerblue'>  Hello World for Jupyter Notebook\n",
+    "1. In command line, type: jupyter notebook &\n",
+    "2. Click: New, Python 3\n",
+    "3. Type: \n",
+    "    `print(Hello world!)`\n",
+    "4. Press: shift+enter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <font color='dodgerblue'>  Data Storage"
    ]
   },
@@ -107,14 +119,7 @@
     "* Able to be sliced\n",
     "* Useful for sequential data\n",
     "\n",
-    "#### <font color='midnightblue'> Example: Indexed"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### <font color='midnightblue'> Example: Slicable"
+    "#### <font color='midnightblue'> Example: Indexing & Slicing"
    ]
   },
   {
@@ -136,6 +141,7 @@
     "* Indexed\n",
     "* Able to be sliced\n",
     "* Useful for *structured* data\n",
+    "\n",
     "#### <font color='midnightblue'> Example: Immutable"
    ]
   },
@@ -179,7 +185,12 @@
     "* Defined using np.array()\n",
     "* Mutable \n",
     "* Indexed\n",
-    "* NOT able to have mixed data types\n",
+    "* NOT able to have mixed data types - numpy arrays are homogeneous and contain elements of the same dtype.\n",
+    "\n",
+    "    dtypes are data type objects used within numpy. There are built in dtypes representing \n",
+    "       - np.int8, np.int16, np.int32, np.uint8, np.float32, np.bool_, np.complex_, etc...\n",
+    "     Also you can create a dtype to suit your needs, e.g. structures of fields of the built in dtypes.\n",
+    "     For more information, see the documentation: https://docs.scipy.org/doc/numpy-1.12.0/reference/arrays.dtypes.html\n",
     "* Useful for linear algebra - mathematical operations act quickly on numpy arrays\n",
     "* Allow integration between C/C++ and Fortran\n",
     "\n",
@@ -323,6 +334,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# <font color='dodgerblue'> Reading from and writing to files\n",
+    "\n",
+    "The function open() can be used to read from, write to or append a file.\n",
+    "It creates a file object\n",
+    "\n",
+    "It takes two arguments, the filename and the mode indicating what you want to do with the file:\n",
+    "* 'r' for reading (this is the default)\n",
+    "* 'r+' for reading and writing\n",
+    "* 'w' for writing\n",
+    "* 'a' for appending\n",
+    "\n",
+    "\n",
+    "\n",
+    "Once a file object is created, you can then use many functions including the following:\n",
+    "* read()\n",
+    "* readline()\n",
+    "* readlines()\n",
+    "- list()\n",
+    "- iterate over lines \n",
+    "- write()\n",
+    "\n",
+    "For a tutorial on input and output, visit: https://docs.python.org/3/tutorial/inputoutput.html\n",
+    "\n",
+    "#### <font color='midnightblue'> Examples: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <font color='dodgerblue'> Other common modules\n",
     "\n",
     "So far we have imported numpy and matplotlib.\n",
@@ -355,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
