--- a/basics_B/Recap/Basics_examples.ipynb
+++ b/basics_B/Recap/Basics_examples.ipynb
@@ -4,15 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color='midnightblue'> Important things to discuss:\n",
-    "    - List indexing begins at 0 \n",
-    "    - Python is call by value"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### <font color='mediumblue'> Lists"
    ]
   },
@@ -25,18 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "18\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "list1 = [10, 12, 14, 16, 18]\n",
     "\n",
@@ -54,18 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10, 12, 14]\n",
-      "[16, 18]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "print(list1[0:3])    # Slicing: exclusive of end value\n",
     "                     #  i.e. get i=(0, 1, .. n-1)\n",
@@ -82,21 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10, 12, 14, 16, 18, 20]\n",
-      "[10, 12, 14, 16, 18, 20, 22, 24, 26]\n",
-      "[10, 12, 14, 'squirrel', 18, 20, 22, 24, 26]\n",
-      "[10, 12, 14, 18, 20, 22, 24, 26]\n",
-      "[10, 12, 14, 16, 18, 20, 22, 24, 26]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "list1.append(20)\n",
     "print(list1)\n",
@@ -130,31 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10, 12, 14, 16, 18)\n",
-      "10\n",
-      "(12, 14)\n",
-      "(16, 18)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'append'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-0ac614ae44ab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtuple1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mtuple1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtuple1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "tuple1 = (10, 12, 14, 16, 18)\n",
     "print(tuple1)\n",
@@ -170,30 +117,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color='midnightblue'> Example: Lists of tuples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "listoftuples=[tuple1[:3], tuple1[3:]]\n",
-    "print(listoftuples)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### <font color='midnightblue'> Example: Tuples are faster"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%timeit tuple1=(10,12,14,16,18)\n",
@@ -212,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "tuple2 = 'Lucy','Ryan'\n",
@@ -221,6 +155,40 @@
     "\n",
     "b, a = a, b\n",
     "print('{} is OK, {} is amazing!'.format(a, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ages = [('Lucy', 25), ('Ryan', 24)]\n",
+    "\n",
+    "for name, age in ages:\n",
+    "    print('{} is {}.'.format(name, age))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <font color='midnightblue'> Example: Python is Call by value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "list2 = [list1, tuple1]\n",
+    "list1 = [1, 2 , 3]\n",
+    "print(list2)"
    ]
   },
   {
@@ -239,20 +207,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10 12 14 16 18 20 22 24 26]\n",
-      "[  0.   1.   2.   3.   4.   5.   6.   7.   8.   9.  10.]\n",
-      "[  0.   1.   2.   3.   4.   5.   6.   7.   8.   9.  10.]\n",
-      "[ 0  1  2  3  4  5  6  7  8  9 10]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "# To use numpy, we first have to import the package\n",
     "import numpy as np\n",
@@ -280,35 +239,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The average of array1 is 18.0\n",
-      "The sum of array1 is 162\n",
-      "[  2.20264658e+04   1.62754791e+05   1.20260428e+06   8.88611052e+06\n",
-      "   6.56599691e+07   4.85165195e+08   3.58491285e+09   2.64891221e+10\n",
-      "   1.95729609e+11]\n",
-      "[0 0 0 0 0 0 0 0 0]\n",
-      "[ 0.1         0.08333333  0.07142857  0.0625      0.05555556  0.05\n",
-      "  0.04545455  0.04166667  0.03846154]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([  0.00000000e+00,   1.00000000e+00,   1.22464680e-16,\n",
-       "         7.07106781e-01])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "print('The average of array1 is', np.average(array1))\n",
     "print('The sum of array1 is', np.sum(array1))\n",
@@ -335,22 +270,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "M1:\n",
-      "[[2 3]\n",
-      " [6 3]]\n",
-      "M2:\n",
-      "[[5 6]\n",
-      " [2 9]]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "M1 = np.array([[2,3],[6,3]])\n",
     "M2 = np.array([[5,6],[2,9]])\n",
@@ -364,21 +288,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[10 18]\n",
-      " [12 27]] \n",
-      "\n",
-      "[[16 39]\n",
-      " [36 63]]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "M3 = M1 * M2            # Element-wise multiplication\n",
     "print(M3, '\\n')\n",
@@ -388,21 +302,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-c37ace85f0a6>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-c37ace85f0a6>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    M1 .* M2\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
-    "M1 .* M2"
+    "#### <font color='midnightblue'> Example: Creating an array from a file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "premier_league_data = np.loadtxt('example.csv')\n",
+    "print(premier_league_data)\n",
+    "print(type(premier_league_data[0][0]))"
    ]
   },
   {
@@ -423,30 +339,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'apples': 50, 'pears': 60, 'bananas': 20}\n",
-      "True\n",
-      "The price of apples is 50p.\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-09f1927ffc15>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# Trying to use an index wouldn't work:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprice_table\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: 0"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "price_table = {'apples': 50, 'pears': 60, 'bananas': 20}\n",
     "print(price_table)\n",
@@ -468,39 +365,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['apples', 'pears', 'bananas'])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "price_table.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adding 50 apples at 50p each.\n",
-      "Adding 20 bananas at 20p each.\n",
-      "Total shopping cost is £29.00.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "# Example usage: \n",
     "shopping_list = [('apples', 50), ('bananas', 20)]\n",
@@ -522,19 +402,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'apples': 50, 'pears': 60, 'bananas': 20, 'kiwis': 30}\n",
-      "{'apples': 50, 'pears': 60, 'kiwis': 30}\n",
-      "{'apples': 25, 'pears': 60, 'kiwis': 30}\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "price_table['kiwis']=30\n",
     "print(price_table)\n",
@@ -555,20 +427,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "apples cost 50p\n",
-      "pears cost 60p\n",
-      "bananas cost 20p\n",
-      "kiwis cost 30p\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "# Iterating over the dictionary will iterate over its keys\n",
     "for key in price_table:\n",
@@ -577,21 +440,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "apples cost 50p\n",
-      "pears cost 60p\n",
-      "bananas cost 20p\n",
-      "kiwi cost 30p\n",
-      "kiwis cost 30p\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "# Or use the items method:\n",
     "for key, val in price_table.items():\n",
@@ -614,19 +467,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The square root of 10 is 3.1622776601683795\n",
-      "4.47213595499958\n",
-      "[1.0, 1.4142135623730951, 1.7320508075688772, 2.0]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "def square_root(x):\n",
     "    \"\"\"Useful docstring: Calculates and returns square root of x\"\"\"\n",
@@ -662,18 +507,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "[0, 1, 2, 3, 50]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "def update_integer(i):\n",
     "    # attempt to update i (integers) are immutable\n",
@@ -702,20 +540,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -741,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -757,6 +586,124 @@
     "ax.set_xlabel('$x$');  ax.set_ylabel(r'$sin(x)$')\n",
     "ax.set_xticks(xtick_values)\n",
     "ax.set_xticklabels(xtick_labels, fontsize=25);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <font color='dodgerblue'> Reading from and writing to files\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "f1 = open('textfile.txt', 'r+')\n",
+    "print(f1.read())\n",
+    "f1.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('textfile.txt', 'r+') as f1:\n",
+    "    print(f1.readline())\n",
+    "    print(f1.readline())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('textfile.txt', 'r+') as f1:\n",
+    "    print(f1.readlines())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('textfile.txt', 'r+') as f1:\n",
+    "    print(list(f1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('textfile.txt', 'r+') as f1:\n",
+    "    for line in f1:\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('textfile.txt', 'r+') as f1:\n",
+    "    f1.write('Hello')\n",
+    "    print(f1.readline())\n",
+    "    f1.write('Second Hello')\n",
+    "    print(f1.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('textfile.txt', 'r+') as f1:\n",
+    "    print(f1.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('textfile.txt', 'r+') as f1:\n",
+    "    lines = f1.readlines()\n",
+    "    del lines[-1]\n",
+    "    lines[2] = 'I have changed the third line\\n'\n",
+    "    \n",
+    "with open('textfile.txt', 'w') as f1:\n",
+    "    f1.writelines(lines)\n",
+    "    f1.seek(0)\n",
+    "    \n",
+    "with open('textfile.txt') as f1:\n",
+    "    print(f1.read())"
    ]
   }
  ],
@@ -776,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
